# rust-wasm-image-processing

./: .gitignore  Cargo.toml  README.md  descriptions.md  dprint.json  flake.nix  rust-toolchain.toml  serve.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
exercises/: Cargo.toml
exercises/src/: exercise_1.rs  exercise_2.rs  exercise_3.rs  exercise_4.rs
frontend/: Cargo.toml  Trunk.toml  _headers  book.toml  index.css  index.html  index.js  initializers.mjs  workshop.css  workshop.js
frontend/book/: 00_welcome.md  SUMMARY.md  epilogue.md  exercise_1.md  exercise_2.md  exercise_3.md  exercise_4.md
frontend/book/includes/: error-flash.html
frontend/src/: lib.rs  main.rs
transformers/: Cargo.toml
transformers/src/: exercise_1.rs  exercise_2.rs  exercise_3.rs  exercise_4.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: cargo.rs  main.rs  tracing.rs
