[workspace]
resolver = "3"
members = ["backend", "frontend", "transformers", "xtask"]

[workspace.dependencies]
photon = { package = "photon-rs", version = "0.3.3" }
wasm-bindgen = "0.2.106"
axum = "0.8.8"
reqwest = "0.13.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "process"] }

transformers = { version = "0.1.0", path = "./transformers" }

color-eyre = "0.6.4"
eyre = "0.6.12"
clap = { version = "4.5.38", features = ["derive", "env"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }
tracing-core = { version = "0.1.36", default-features = false }
tracing-subscriber = "0.3.22"
tracing-error = "0.2.1"
heck = "0.5.0"

[profile.dev]
opt-level = 1
