[workspace]
resolver = "3"
members = ["backend", "frontend", "transformers"]

[workspace.dependencies]
transformers = { version = "0.1.0", path = "./transformers" }

photon = { package = "photon-rs", version = "0.3.3" }
wasm-bindgen = "0.2.106"
axum = "0.8.8"
reqwest = "0.13.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "process"] }
tracing-subscriber = { version = "0.3.22", features=["env-filter"] }
tracing = "0.1.44"
tower-http = { version = "0.6.8", features = ["trace"] }

[profile.dev]
opt-level = 1
