[workspace]
resolver = "3"
members = ["backend", "exercises", "frontend"]

[workspace.dependencies]
exercises = { version = "0.1.0", path = "./exercises" }

axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["query"] }
photon = { package = "photon-rs", version = "0.3.3" }
reqwest = "0.13.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "process"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasm-bindgen = "0.2.106"

[profile.dev]
opt-level = 1
