[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
photon = { package = "photon-rs", version = "0.3.3" }
reqwest = "0.13.1"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
transformers = { version = "0.1.0", path = "../transformers" }
