[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
exercises.workspace = true
photon.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
