[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
tracing-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-error.workspace = true
color-eyre.workspace = true
tokio.workspace = true
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
